--- a/AssStudentManager/web/login.html
+++ b/AssStudentManager/web/login.html
@@ -9,28 +9,38 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
+    <body style="margin: 0px; margin-top: -22px;">
         <div>
             <form action="LoginServlet" method="POST">
-            <div>
-                <h1>HT Quan lí sinh viên</h1>
-                <div style="margin: auto;">
-                    <table>
-                        <tr>
-                            <td>User name:</td><td><input type="text" name="User"/></td>
-                        </tr>
-                        <tr>
-                            <td>Password:</td><td><input type="password" name="Pass"/></td>
-                        </tr>
-                        <tr>
-                            <td></td><td><input type="submit" value="Login"/></td>
-                        </tr>
-                    </table> 
+                <div style="background: #bbcfe1; height: 800px;">
+                    <div style="margin-left: 600px;">
+                        <h1 style="padding-top: 150px; padding-left: 30px;" >HT Quan lí sinh viên</h1>
+                        <div style="border: 3px solid black; width: fit-content; padding: 10px; background: white">
+                            <table style="height: 100px;">
+                                <caption style="opacity: 0.6">ban phai dang nhap de bat dau lam viec</caption>
+                                <tr>
+                                    <td></td><td><input style="width: 300px; height: 28px;" type="text" name="User" placeholder="tai khoan"/></td>
+                                </tr>
+                                <tr>
+                                    <td></td><td><input style="width: 300px; height: 28px;" type="password" name="Pass" placeholder="mat khau"/></td>
+                                </tr>
+
+                            </table> 
+                            <table style="height: 60px;">
+                                <tr>
+                                    <td><input type="checkbox" name="Remember" value="ON" />Remember Me</td><td><input style="margin-left: 125px; padding: 5px 15px; color: white; background: #4f4fee;" type="submit" value="Login"/></td>
+                                </tr>
+                                <tr>
+                                    <td><a style="text-decoration: none" href="">Quen mat khau</a></td>
+                                </tr>
+
+                            </table>
+
+                        </div>
+                    </div>
+
                 </div>
-            </div>
-
-
-        </form>
+            </form>
         </div>
     </body>
 </html>
