--- a/AssStudentManager/web/login.html
+++ b/AssStudentManager/web/login.html
@@ -17,7 +17,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
                         <h1 style="padding-top: 150px; padding-left: 30px;" >HT Quan lí sinh viên</h1>
                         <div style="border: 3px solid black; width: fit-content; padding: 10px; background: white">
                             <table style="height: 100px;">
-                                <caption style="opacity: 0.6">ban phai dang nhap de bat dau lam viec</caption>
+                                <caption style="opacity: 1">Ban phai dang nhap de bat dau lam viec</caption>
                                 <tr>
                                     <td></td><td><input style="width: 300px; height: 28px;" type="text" name="User" placeholder="tai khoan"/></td>
                                 </tr>
